--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@
   margin: 0px;
 }
 
+.card-body {
+  background:blue;
+  color: yellow;
+  font-size: 18px;
+}
+
 @media screen and (min-width: 425px) {
   .button-load-forecast {
     width: 50% !important;
